# petclinic-reverse-engineering

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_COMPARISON_REPORT.md  README.md  docker-compose.yml  pyproject.toml
admin_server/: main.py
api_gateway/: bff.py  circuit_breaker.py  fallback.py  main.py  pages.py  proxy.py
api_gateway/templates/: base.html  owner_details.html  owner_form.html  owners_list.html  pet_form.html  vets_list.html  visit_form.html  welcome.html
config/: api-gateway.yml  application.yml  customers-service.yml  genai-service.yml  vets-service.yml  visits-service.yml
config_server/: main.py
customers_service/: main.py  models.py  routes.py  schemas.py  seed.py
discovery_server/: main.py  registry.py  routes.py  schemas.py
docker/: Dockerfile
docker/grafana/: grafana.ini
docker/prometheus/: prometheus.yml
docs/: 00-overview.md  01-architecture.md  02-data-models.md  03-api-spec.md  04-infrastructure.md  05-inter-service-communication.md  06-genai-service.md  07-frontend.md  08-testing.md  API_COMPARISON_SUMMARY.md  FEATURE_SPEC.md  architecture-diagram.md
genai_service/: chat.py  main.py  tool_handler.py  tools.py  vector_store.py
scripts/: capture_screenshots.py  docker-smoke-test.sh
shared/: actuator.py  config.py  database.py  metrics.py  tracing.py
tests/: conftest.py
tests/e2e/: test_chat_widget.py  test_owner_details.py  test_owner_form.py  test_owners_list.py  test_pet_form.py  test_vets_list.py  test_visit_form.py  test_welcome.py
tests/integration/: test_create_pet.py  test_customers_main.py  test_get_owner_by_id.py  test_get_pet.py  test_owners_api.py  test_pet_types.py  test_update_owner.py  test_update_pet.py  test_vets_main.py  test_visits_main.py  test_visits_routes.py
tests/unit/: test_actuator.py  test_admin_server.py  test_base_template.py  test_chromadb_smoke.py  test_config.py  test_config_server.py  test_customers_schemas.py  test_customers_seed.py  test_database.py  test_discovery_server.py  test_docker_compose.py  test_gateway_bff.py  test_gateway_circuit_breaker.py  test_gateway_fallback.py  test_gateway_main.py  test_gateway_proxy.py  test_gateway_retry.py  test_genai_chat.py  test_genai_main.py  test_genai_tool_handler.py  test_genai_tools.py  test_genai_vector_store.py  test_metrics.py  test_owner_model.py  test_pet_model.py  test_pet_type_model.py  test_scaffold.py  test_tracing.py  test_vet_model.py  test_vets_routes.py  test_vets_schemas.py  test_vets_seed.py  test_visit_model.py  test_visits_schemas.py  test_visits_seed.py
vets_service/: main.py  models.py  routes.py  schemas.py  seed.py
visits_service/: main.py  models.py  routes.py  schemas.py  seed.py
(+5 files in other folders)
